src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Upweight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate whether this product is an upweight on an existing product</description>
        <inlineHelpText>is this an upweight?</inlineHelpText>
        <label>Upweight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_CCI_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use CCI Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebSite_Name__c</fullName>
        <label>WebSite Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebSite__c</fullName>
        <label>WebSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Category_Name__c</fullName>
        <label>Website Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Category__c</fullName>
        <label>Website Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wowcher_Cost_Per_Week__c</fullName>
        <description>Wowcher Display only field</description>
        <label>Cost Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wowcher_Discount__c</fullName>
        <description>Discount for Wowcher Display only pitches</description>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wowcher_Duration__c</fullName>
        <description>Duration of the product for Wowcher only</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wowcher_Total_Cost__c</fullName>
        <description>Wowcher Display only</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield PCCM</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_Name__c</fullName>
        <label>Zone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAGeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>FirstInsertionDate</fullName>
        <active>true</active>
        <description>First Insertion Date has to be equal or higher then Opp Close Date.</description>
        <errorConditionFormula>ServiceDate &lt;  Opportunity.CloseDate
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>ServiceDate</errorDisplayField>
        <errorMessage>First Insertion Date has to be equal or higher then Opp Close Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Insertion_Date</fullName>
        <active>true</active>
        <description>Last Insertion Date must come after First Insertion Date</description>
        <errorConditionFormula>ServiceDate &gt; Last_Insertion_Date__c
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Last_Insertion_Date__c</errorDisplayField>
        <errorMessage>Last Insertion Date must come after First Insertion Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Insertion_Required</fullName>
        <active>true</active>
        <description>Last Insertion Date is required.  Please enter a value.</description>
        <errorConditionFormula>(Schedule_Revenue__c = &apos;Monthly&apos;) &amp;&amp;
ISNULL(Last_Insertion_Date__c) &amp;&amp; 
!( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Last_Insertion_Date__c</errorDisplayField>
        <errorMessage>Last Insertion Date is required.  Please enter a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LostToCompetitor</fullName>
        <active>true</active>
        <description>If Loss Reason is &apos;Lost to Competitor&apos;, competitor must be selected</description>
        <errorConditionFormula>ISPICKVAL(Reason_for_Inactive2__c, &apos;Lost to Competitor&apos;) &amp;&amp; ISBLANK(TEXT(	Competitor_Title__c))
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Competitor_Title__c</errorDisplayField>
        <errorMessage>If Loss Reason is &apos;Lost to Competitor&apos;, competitor must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReasonForInactive</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Active__c = FALSE, ISPICKVAL(Reason_for_Inactive2__c,&quot;&quot;))
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Reason_for_Inactive2__c</errorDisplayField>
        <errorMessage>Please enter a reason for making this Pitch Idea Inactive.</errorMessage>
    </validationRules>
</CustomObject>